弃用autolayout,首页布局设计修改，toolbar封装

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:background="@color/bg_white"
         android:padding="6dp"
-        android:src="@drawable/nc_icon_back"/>
+        android:src="@drawable/icon_back"/>
 
 
     <TextView
