--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -19,71 +19,72 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
+                android:layout_height="216dp"
                 android:background="@drawable/test_store_bg"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5"/>
 
-            <com.zhy.autolayout.AutoRelativeLayout
+            <RelativeLayout
                 android:id="@+id/rl_store_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:layout_marginBottom="60dp"
-                android:paddingLeft="35px">
+                android:layout_marginBottom="60.0dip"
+                android:paddingLeft="10.0dip">
 
 
                 <ImageView
-                    android:layout_width="110px"
-                    android:layout_height="110px"
+                    android:layout_width="40.0dip"
+                    android:layout_height="40.0dip"
                     android:src="@drawable/test_good_store"/>
 
                 <View
-                    android:layout_width="2px"
-                    android:layout_height="85px"
+                    android:layout_width="1px"
+                    android:layout_height="30.0dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="400px"
+                    android:layout_marginRight="115dp"
                     android:background="@color/bg_white"/>
 
                 <TextView
                     style="@style/LightTextView"
-                    android:layout_marginLeft="130px"
+                    android:layout_marginLeft="45dp"
+                    android:layout_marginRight="120dp"
                     android:text="梅子熟了 文艺复古清新女装"
                     android:textColor="@color/bg_white"/>
 
                 <TextView
                     style="@style/LightTextView"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="250px"
+                    android:layout_marginRight="70.0dip"
                     android:text="247.6万"
                     android:textColor="@color/bg_white"/>
 
                 <TextView
                     style="@style/LightTextView"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="250px"
-                    android:layout_marginTop="50px"
+                    android:layout_marginRight="70.0dip"
+                    android:layout_marginTop="20.0dip"
                     android:text="粉丝数"
                     android:textColor="@color/bg_white"/>
 
                 <Button
-                    android:layout_width="180px"
-                    android:layout_height="70px"
+                    android:layout_width="60.0dip"
+                    android:layout_height="22.0dip"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="30px"
+                    android:layout_marginRight="10px"
                     android:background="@drawable/bg_flow_selected"
                     android:text="关注"
                     android:textColor="@color/bg_white"/>
-            </com.zhy.autolayout.AutoRelativeLayout>
+            </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/store_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:layout_marginBottom="55dp"
+                android:layout_marginBottom="35dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
@@ -91,10 +92,10 @@
                     android:id="@+id/goodshow_btn_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="50px"
+                    android:layout_marginRight="20dp"
                     android:src="@drawable/icon_back_w"/>
 
-                <com.zhy.autolayout.AutoRelativeLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/colorTransparency"
@@ -103,85 +104,78 @@
                     android:orientation="horizontal">
 
 
-                    <com.zhy.autolayout.AutoLinearLayout
-                        android:layout_width="770px"
-                        android:layout_height="90px"
+                    <LinearLayout
+                        android:layout_width="260dp"
+                        android:layout_height="30dp"
                         android:layout_centerVertical="true"
                         android:background="@drawable/btn_bg_normal"
                         android:orientation="horizontal">
 
                         <EditText
                             android:id="@+id/goodshow_et_search"
-                            android:layout_width="690px"
-                            android:layout_height="90px"
+                            android:layout_width="230dp"
+                            android:layout_height="30dp"
                             android:layout_centerVertical="true"
                             android:background="@null"
                             android:focusableInTouchMode="false"
                             android:hint="@string/search_search_hint"
-                            android:padding="20px"
-                            android:paddingLeft="10px"
+                            android:paddingLeft="5dp"
                             android:singleLine="true"
                             android:textColor="@color/tv_name"
                             android:textColorHint="@color/tv_hint"
                             android:textSize="@dimen/tv_Normal"/>
 
                         <ImageView
-                            android:layout_width="80px"
-                            android:layout_height="90px"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
                             android:background="@drawable/btn_bg_gray"
                             android:src="@drawable/act_home_search_de"
                             />
 
 
-                    </com.zhy.autolayout.AutoLinearLayout>
+                    </LinearLayout>
 
 
                     <ImageView
                         android:id="@+id/goodshow_btn_msg"
-                        android:layout_width="79px"
-                        android:layout_height="79px"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="40px"
-                        android:scaleType="fitXY"
+                        android:layout_marginRight="15dp"
+                        android:scaleType="centerInside"
                         android:src="@drawable/act_home_msg"/>
 
                     <de.hdodenhof.circleimageview.CircleImageView
-                        android:layout_width="25px"
-                        android:layout_height="25px"
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
                         android:layout_alignParentRight="true"
-                        android:layout_marginRight="30px"
-                        android:layout_marginTop="25px"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginTop="8dp"
                         android:src="@color/tv_price"/>
 
-                </com.zhy.autolayout.AutoRelativeLayout>
+                </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
 
-            <LinearLayout
+
+            <com.flyco.tablayout.SlidingTabLayout
+                android:id="@+id/store__tabs"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="41.0dip"
                 android:layout_gravity="bottom"
                 android:background="@color/bg_white"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                app:tl_divider_color="@color/colorLine"
+                app:tl_divider_padding="10.0dip"
+                app:tl_divider_width="1px"
+                app:tl_indicator_color="@color/colorPrimaryDark"
+                app:tl_indicator_width_equal_title="true"
+                app:tl_tab_space_equal="true"
+                app:tl_textSelectColor="@color/colorPrimaryDark"
+                app:tl_textUnselectColor="@color/tv_name"
+                app:tl_textsize="@dimen/tv_Regular"
+                app:tl_underline_gravity="BOTTOM"/>
 
-                <com.flyco.tablayout.SlidingTabLayout
-                    android:id="@+id/store__tabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    app:tl_divider_color="@color/colorLine"
-                    app:tl_divider_padding="10dp"
-                    app:tl_divider_width="1px"
-                    app:tl_indicator_color="@color/colorPrimary"
-                    app:tl_indicator_width_equal_title="true"
-                    app:tl_tab_space_equal="true"
-                    app:tl_textSelectColor="@color/colorPrimary"
-                    app:tl_textUnselectColor="@color/tv_name"
-                    app:tl_textsize="14dp"
-                    app:tl_underline_gravity="BOTTOM"/>
-
-            </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -192,52 +186,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/store__tabs"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="6dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="45.0dip"
         android:layout_gravity="bottom"
         android:background="@color/bg_white"
-        android:elevation="10dp">
+        android:elevation="10.0dip">
 
         <TextView
             android:id="@+id/tv_store_introduce"
-            android:layout_width="0dp"
+            android:layout_width="0.0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="店铺介绍"
-            android:textSize="@dimen/tv_Blod"/>
+            android:textSize="@dimen/tv_Regular"/>
 
         <View
             android:layout_width="1px"
-            android:layout_height="match_parent"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
             android:background="@color/colorLine"/>
 
         <TextView
             android:id="@+id/tv_store_voucher"
-            android:layout_width="0dp"
+            android:layout_width="0.0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="免费领券"
-            android:textSize="@dimen/tv_Blod"/>
+            android:textSize="@dimen/tv_Regular"/>
 
         <View
             android:layout_width="1px"
-            android:layout_height="match_parent"
+            android:layout_height="18dp"
+            android:layout_gravity="center_vertical"
             android:background="@color/colorLine"/>
+
 
         <TextView
             android:id="@+id/tv_store_service"
-            android:layout_width="0dp"
+            android:layout_width="0.0dip"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:text="联系客服"
-            android:textSize="@dimen/tv_Blod"/>
+            android:textSize="@dimen/tv_Regular"/>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
