--- a/app/src/main/res/layout/evaluate_item_simple.xml
+++ b/app/src/main/res/layout/evaluate_item_simple.xml
@@ -3,31 +3,31 @@
                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
-                                       android:paddingTop="30px"
-                                       android:background="@color/bg_white">
+                                       android:background="@color/bg_white"
+                                       android:paddingTop="10dp">
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/llStar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="30px"
-        android:layout_marginTop="20px"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/evaluate_star"
         android:orientation="horizontal"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/customer_image"
-        android:layout_width="100px"
-        android:layout_height="100px"
-        android:layout_marginLeft="30px"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="28px"
         android:src="@drawable/touxiang"/>
 
     <TextView
         android:id="@+id/customerName"
         style="@style/evaluate_text_style"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="20px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/customer_image"
         android:text="JJSR"
         android:textColor="@color/tv_name"
@@ -38,8 +38,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/customerName"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="10px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/customer_image"
         android:text="2017-05-12"
         android:textColor="@color/tv_hint"
@@ -50,8 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/customerName"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="10px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/evaluatetime"
         android:text="颜色：K02黄色；尺码:M"
         android:textColor="@color/tv_hint"
@@ -63,13 +63,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/customerName"
-        android:layout_marginLeft="30px"
-        android:layout_marginTop="70px"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="30dp"
         android:ellipsize="end"
         android:letterSpacing="0.01"
-        android:lineSpacingExtra="10px"
+        android:lineSpacingExtra="15px"
         android:maxLines="2"
-        android:text="凑合，面料比较软，不太挺阔，凑合,红红火火恍恍惚惚吼吼所所所所所所所所少时诵诗书所所所"
+        android:text="裙裙非常漂亮，素静的花色，飘逸的下摆和绑带，很有感觉，很喜欢。背部胸部还有下摆是有内衬的，不会透。"
         android:textColor="@color/tv_name"
         android:textSize="@dimen/tv_Normal"/>
 
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/evaluateText"
-        android:layout_marginTop="10.0dip"
+        android:layout_marginTop="10dp"
         app:alignContent="flex_start"
         app:flexWrap="wrap"/>
 
@@ -128,7 +128,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ll_evaluate_late"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="5dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="30px"
@@ -167,7 +167,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="10px"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="2dp"
         android:layout_below="@+id/ll_evaluate_show"
         android:background="@color/bg_gray"/>
 </com.zhy.autolayout.AutoRelativeLayout>
