--- a/app/src/main/res/layout/fragment_eva_tab.xml
+++ b/app/src/main/res/layout/fragment_eva_tab.xml
@@ -1,6 +1,7 @@
 <com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                      android:layout_width="match_parent"
                                      android:layout_height="140px"
+                                     android:layout_marginTop="6dp"
                                      android:background="@color/bg_white"
                                      android:orientation="horizontal"
                                      android:padding="20px">
