--- a/app/src/main/res/layout/fragment_good_comment.xml
+++ b/app/src/main/res/layout/fragment_good_comment.xml
@@ -9,7 +9,7 @@
 
    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_comment"
-       android:layout_marginTop="5px"
+       android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
 
