--- a/app/src/main/res/layout/fragment_good_eva.xml
+++ b/app/src/main/res/layout/fragment_good_eva.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_eva"
         android:layout_width="match_parent"
+        android:layout_marginTop="6dp"
         android:layout_height="match_parent"/>
 
 </com.zhy.autolayout.AutoLinearLayout>
