--- a/app/src/main/res/layout/fragment_good_itemtab.xml
+++ b/app/src/main/res/layout/fragment_good_itemtab.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="125px"
+        android:layout_marginTop="6dp"
         android:background="@color/bg_white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -34,7 +35,8 @@
         <View
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_margin="10px"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:background="@color/colorLine"/>
 
         <LinearLayout
@@ -58,7 +60,8 @@
         <View
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:layout_margin="10px"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:background="@color/colorLine"/>
 
         <LinearLayout
