--- a/app/src/main/res/layout/fragment_home_header.xml
+++ b/app/src/main/res/layout/fragment_home_header.xml
@@ -9,7 +9,7 @@
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp">
 
-    <com.zhy.autolayout.AutoRelativeLayout
+    <RelativeLayout
         android:id="@+id/home_header_rl"
         android:layout_width="match_parent"
         android:layout_height="?android:actionBarSize"
@@ -17,52 +17,45 @@
         android:focusableInTouchMode="true"
         android:orientation="horizontal">
 
-        <View
-            android:id="@+id/v_home_header_dark"
-            android:layout_width="match_parent"
-            android:layout_height="35px"
-            android:background="@color/colorPrimaryDark"
-            android:visibility="gone"/>
-
         <ImageView
             android:id="@+id/act_home_btn_scan"
-            android:layout_width="70px"
-            android:layout_height="70px"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="40px"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/act_home_scan"/>
 
         <EditText
             android:id="@+id/frag_home_et_search"
-            android:layout_width="680px"
-            android:layout_height="80px"
+            android:layout_width="225dp"
+            android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:layout_centerVertical="true"
             android:background="@drawable/search_bg"
             android:drawableLeft="@drawable/act_home_search_de"
             android:hint="@string/search_search_hint"
-            android:padding="20px"
+            android:padding="7dp"
             android:singleLine="true"
             android:textColor="@color/tv_hint"
             android:textColorHint="@color/tv_hint"
-            android:textSize="@dimen/tv_light"/>
+            android:textSize="@dimen/tv_Normal"/>
 
         <ImageView
             android:id="@+id/act_home_btn_msg"
-            android:layout_width="79px"
-            android:layout_height="80px"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="40px"
+            android:layout_marginRight="15dp"
             android:background="@drawable/act_home_msg"/>
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="25px"
-            android:layout_height="25px"
+            android:layout_width="8dp"
+            android:layout_height="8dp"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20px"
-            android:layout_marginTop="30px"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="10dp"
             android:src="@color/tv_price"/>
 
-    </com.zhy.autolayout.AutoRelativeLayout>
+    </RelativeLayout>
 </android.support.v7.widget.Toolbar>
