--- a/app/src/main/res/layout/fragment_store_all.xml
+++ b/app/src/main/res/layout/fragment_store_all.xml
@@ -30,7 +30,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/com_sort"
                     android:textColor="@drawable/text_btn_color"
-                    android:textSize="@dimen/tv_Regular"/>
+                    android:textSize="@dimen/tv_Normal"/>
 
                 <ImageView
                     android:id="@+id/ivSort"
@@ -49,7 +49,7 @@
                 android:gravity="center"
                 android:text="@string/sell_sort"
                 android:textColor="@drawable/text_btn_color"
-                android:textSize="@dimen/tv_Regular"/>
+                android:textSize="@dimen/tv_Normal"/>
 
 
             <com.zhy.autolayout.AutoLinearLayout
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/select_sort"
                     android:textColor="@drawable/text_btn_color"
-                    android:textSize="@dimen/tv_Regular"/>
+                    android:textSize="@dimen/tv_Normal"/>
 
                 <ImageView
                     android:id="@+id/ivScreen"
