--- a/app/src/main/res/layout/fragment_store_sell.xml
+++ b/app/src/main/res/layout/fragment_store_sell.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:layout_width="match_parent"
-                                       android:layout_height="665px"
-                                       android:padding="30px">
+                                       android:layout_height="220dp"
+                                       android:padding="10dp">
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/iv_store_co_1"
-        android:layout_width="360px"
-        android:layout_height="605px">
+        android:layout_width="120dp"
+        android:layout_height="205dp">
 
         <ImageView
             android:layout_width="match_parent"
@@ -16,7 +16,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="25dp"
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
             android:gravity="center"
@@ -28,8 +28,8 @@
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/iv_store_co_2"
-        android:layout_width="630px"
-        android:layout_height="260px"
+        android:layout_width="210dp"
+        android:layout_height="90dp"
         android:layout_alignParentRight="true">
 
         <ImageView
@@ -39,7 +39,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="25dp"
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
             android:gravity="center"
@@ -52,8 +52,8 @@
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/iv_store_co_3"
-        android:layout_width="300px"
-        android:layout_height="300px"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         >
@@ -65,7 +65,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="25dp"
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
             android:gravity="center"
@@ -78,21 +78,24 @@
 
     <com.zhy.autolayout.AutoRelativeLayout
         android:id="@+id/iv_store_co_4"
-        android:layout_width="300px"
-        android:layout_height="300px"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginRight="25px"
+        android:layout_marginRight="10dp"
         android:layout_toLeftOf="@+id/iv_store_co_3"
         >
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/home_store_4"/>
+            android:background="@drawable/home_store_4"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="80px"
+            android:layout_height="25dp"
             android:layout_alignParentBottom="true"
             android:background="@color/colorTransparency_B"
             android:gravity="center"
