--- a/app/src/main/res/layout/home_item_ad.xml
+++ b/app/src/main/res/layout/home_item_ad.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.xinyuan.xyshop.widget.AutoCardView
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginLeft="20px"
-    android:layout_marginRight="20px"
-    android:layout_marginTop="20px"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="6dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="2dp"
+    card_view:cardElevation="4dp"
     card_view:cardUseCompatPadding="true">
 
-    <com.zhy.autolayout.AutoLinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300px">
-
+        android:layout_height="100dp">
 
         <ImageView
             android:id="@+id/home_ad_img"
@@ -25,8 +24,7 @@
             android:layout_height="match_parent"
             android:scaleType="fitXY"/>
 
+    </LinearLayout>
 
-    </com.zhy.autolayout.AutoLinearLayout>
 
-
-</com.xinyuan.xyshop.widget.AutoCardView>
+</android.support.v7.widget.CardView>
