--- a/app/src/main/res/layout/home_item_expandable.xml
+++ b/app/src/main/res/layout/home_item_expandable.xml
@@ -7,20 +7,18 @@
 
     <ImageView
         android:id="@+id/home_menu_img"
-        android:layout_width="130px"
-        android:layout_height="130px"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40px"
+        android:layout_marginTop="10dp"
         android:scaleType="fitXY"/>
 
     <TextView
         android:id="@+id/home_menu_title"
         style="@style/LightTextView"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="40px"
-        android:layout_marginTop="20px"
-
-        />
+        android:layout_marginBottom="12dp"
+        android:layout_marginTop="10dp" />
 
 
 </LinearLayout>
