--- a/app/src/main/res/layout/home_item_tab.xml
+++ b/app/src/main/res/layout/home_item_tab.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <com.zhy.autolayout.AutoLinearLayout
+    <include layout="@layout/home_item_tab_title"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="330px"
-        android:layout_marginTop="3px"
+        android:layout_height="110dp"
+        android:layout_marginTop="1dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/home_tab_img1"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="3px"
-            android:layout_weight="0.47"
+            android:layout_marginRight="1dp"
+            android:layout_weight="0.463"
             android:scaleType="fitXY"/>
 
 
@@ -24,24 +26,23 @@
             android:id="@+id/home_tab_img2"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="3px"
-            android:layout_weight="0.265"
+            android:layout_marginRight="1dp"
+            android:layout_weight="0.264"
             android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/home_tab_img3"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_weight="0.265"
-            android:scaleType="fitXY"
-            />
+            android:layout_weight="0.264"
+            android:scaleType="fitXY"/>
 
-    </com.zhy.autolayout.AutoLinearLayout>
+    </LinearLayout>
 
-    <com.zhy.autolayout.AutoLinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="330px"
-        android:layout_marginTop="3px"
+        android:layout_height="110dp"
+        android:layout_marginTop="1dp"
         android:orientation="horizontal">
 
 
@@ -49,8 +50,8 @@
             android:id="@+id/home_tab_img4"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="3px"
-            android:layout_weight="0.47"
+            android:layout_marginRight="1dp"
+            android:layout_weight="0.463"
             android:scaleType="fitXY"/>
 
 
@@ -58,7 +59,7 @@
             android:id="@+id/home_tab_img5"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="3px"
+            android:layout_marginRight="1dp"
             android:layout_weight="0.265"
             android:scaleType="fitXY"/>
 
@@ -66,10 +67,10 @@
             android:id="@+id/home_tab_img6"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_weight="0.265"
+            android:layout_weight="0.264"
             android:scaleType="fitXY"
             />
 
-    </com.zhy.autolayout.AutoLinearLayout>
+    </LinearLayout>
 
-</com.zhy.autolayout.AutoLinearLayout>
+</LinearLayout>
