--- a/app/src/main/res/layout/home_top.xml
+++ b/app/src/main/res/layout/home_top.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.autolayout.AutoLinearLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -9,11 +9,11 @@
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="850px"
+        android:layout_height="200dp"
         app:indicator_drawable_selected="@drawable/banner_shape"
-        app:indicator_height="24px"
-        app:indicator_margin="20px"
-        app:indicator_width="24px"/>
+        app:indicator_height="8dp"
+        app:indicator_margin="6dp"
+        app:indicator_width="8dp"/>
 
 
     <android.support.v7.widget.RecyclerView
@@ -28,12 +28,12 @@
         android:layout_height="3px"
         android:background="@color/colorLine"/>
 
-    <com.zhy.autolayout.AutoRelativeLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="105px"
+        android:layout_height="35dp"
         android:background="@color/bg_white"
-        android:paddingLeft="20px"
-        android:paddingRight="20px">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <TextView
             android:id="@+id/textView"
@@ -46,33 +46,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"
+            android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/textView"
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
             app:mvTextColor="@color/colorPrimary"
-            app:mvTextSize="12sp"/>
+            app:mvTextSize="@dimen/tv_light"/>
 
         <com.sunfusheng.marqueeview.MarqueeView
             android:id="@+id/marquee_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
+            android:layout_marginRight="40dp"
             android:layout_toRightOf="@+id/marquee_name"
             android:ellipsize="end"
             app:mvAnimDuration="1000"
             app:mvInterval="3000"
             app:mvSingleLine="true"
-            android:layout_marginRight="40dp"
             app:mvTextColor="@color/tv_hint"
-            app:mvTextSize="12sp"/>
+            app:mvTextSize="@dimen/tv_light"/>
 
         <View
             android:layout_width="3px"
-            android:layout_height="30px"
+            android:layout_height="10dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20px"
-            android:layout_marginRight="20px"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_toLeftOf="@+id/home_notice_more"
             android:background="@color/colorLine"/>
 
@@ -82,7 +82,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:text="@string/more"/>
-    </com.zhy.autolayout.AutoRelativeLayout>
+    </RelativeLayout>
 
 
-</com.zhy.autolayout.AutoLinearLayout>
+</LinearLayout>
