--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
 
     <color name="normal_bg">#f4f4f4</color>
     <color name="bg_white">#ffffff</color>
-    <color name="bg_gray">#f4f4f4</color>
+    <color name="bg_gray">#e6e9ef</color>
     <color name="btn_gray">#f4f4f4</color>
 
 
@@ -15,7 +15,7 @@
 
     <color name="tv_name">#444444</color>
     <color name="tv_brand">#000044</color>
-    <color name="tv_price">#FE2E31</color>
+    <color name="tv_price">#ff3030</color>
     <color name="search_bg">#F8F8FF</color>
     <color name="search_sort_bg">#ababab</color>
 
