--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,12 +19,12 @@
 
 
 
-    <dimen name="tv_heavy">45px</dimen>
-    <dimen name="tv_Blod">42px</dimen>
-    <dimen name="tv_Regular">40px</dimen>
-    <dimen name="tv_Normal">38px</dimen>
-    <dimen name="tv_light">36px</dimen>
-    <dimen name="tv_small">32px</dimen>
+    <dimen name="tv_heavy">20sp</dimen>
+    <dimen name="tv_Blod">14sp</dimen>
+    <dimen name="tv_Regular">13sp</dimen>
+    <dimen name="tv_Normal">12sp</dimen>
+    <dimen name="tv_light">11sp</dimen>
+    <dimen name="tv_small">10sp</dimen>
 
 
     <dimen name="bottom">150px</dimen>
